applications/website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mindspore-website
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: mindsporewebsite
  template:
    metadata:
      labels:
        app: mindsporewebsite
    spec:
      containers:
      - name: website
        image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/mindspore:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 4000m
            memory: 4000Mi
          limits:
            cpu: 4000m
            memory: 8000Mi
        volumeMounts:
          - mountPath: /mnt/share/file
            name: website-data-volume
          - mountPath: /mnt/share/mindspore_repository
            name: website-hub-data-volume
      volumes:
        - name: website-data-volume
          persistentVolumeClaim:
            claimName: website-data
        - name: website-hub-data-volume
          persistentVolumeClaim:
            claimName: website-hub-data
