applications/website/cibot-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mindspore-bot-internal
spec:
  type: ExternalName
  externalName: botservice.bot.svc.cluster.local
