applications/website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^~/resource/ https://gitee.com/mindspore/book redirect;
      rewrite ^/icla https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZtaW5kc3BvcmU= redirect;
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/custom-http-errors: '400,500,404'
  name: website-ingress
spec:
  tls:
    - hosts:
        - www.mindspore.cn
      secretName: website-tls
  rules:
    - host: www.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy-www-admin
              servicePort: 4180
            path: /
          - backend:
              serviceName: mindspore-bot-internal
              servicePort: 8888
            path: /cla
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/custom-http-errors: '400,500,404'
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^~/ https://www.mindspore.cn redirect;
      rewrite ^~/resource(.*) https://gitee.com/mindspore/book redirect;
  name: mindspore-www-website-ingress
spec:
  tls:
    - hosts:
        - mindspore.cn
      secretName: website-tls-2
  rules:
    - host: mindspore.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy-admin
              servicePort: 4180
            path: /
