applications/website/www-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/ https://www.mindspore.cn redirect;
      rewrite ^/resource(.*) https://gitee.com/mindspore/book redirect;
  name: mindspore-www-website-ingress
spec:
  tls:
    - hosts:
        - mindspore.cn
      secretName: website-tls
  rules:
    - host: mindspore.cn
      http:
        paths:
          - backend:
              serviceName: websiteservice
              servicePort: 80
            path: /
